--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         .navbar span {
             color: white;
             font-size: 14px;
+            padding-left: 10px;
         }
         /* Barra Lateral */
         .button-group {
