--- a/index.html
+++ b/index.html
@@ -293,7 +293,9 @@
                     </tr>
                     <tr id="apple-menu" class="dropdown-content">
                         <td colspan="2">
-                            <img src="foto.png" />
+                            <img src="foto.png" style="width:100px;"/>
+                            <img src="foto.png" style="width:100px;"/>
+                            <img src="foto.png" style="width:100px;"/>
                         </td>
                     </tr>
                     <tr>
